--- a/index.html
+++ b/index.html
@@ -183,24 +183,12 @@
     <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
         <div id="mobile-menu" class="d-sm-none">
             <ul id="menu-top-menu" class="menu">
-                <li id="menu-item-17"
-                    class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                    href="https://chainfront.github.io/features/">Features</a></li>
-                <li id="menu-item-19"
-                    class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
-                    href="https://chainfront.github.io/security/">Security</a></li>
-                <li id="menu-item-20"
-                    class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a
-                    href="https://chainfront.github.io/about/">About</a></li>
                 <li id="menu-item-149"
                     class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-149"><a
-                    href="https://chainfront.github.io/case-studies/">Case Studies</a></li>
+                    href="https://github.com/ChainFront/">GitHub</a></li>
                 <li id="menu-item-21"
                     class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a
-                    href="https://chainfront.github.io/blog/">Blog</a></li>
-                <li id="menu-item-210"
-                    class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-210"><a
-                    href="https://chainfront.github.io/consulting/">Consulting</a></li>
+                    href="https://medium.com/chainfront">Blog</a></li>
                 <li id="menu-item-18"
                     class="nav-item button-green menu-item menu-item-type-custom menu-item-object-custom menu-item-18">
                     <a target="_blank" href="./apidocs.html">API Docs</a></li>
@@ -242,7 +230,7 @@
                 <div class="row justify-content-center mb-5">
                     <div class="col-12 col-md-6 text-center">
 
-                        <p class="title">Use the ChainFront Cloud Service RESTful API to solve the security, user adoption, and software development issues stemming from on-device crypto wallets. Our API is now live - click on the developers link above to register and get started!</p>
+                        <p class="title">Use the ChainFront Cloud Service RESTful API to solve the security, user adoption, and software development issues stemming from on-device crypto wallets.</p>
                     </div>
                 </div>
                 <div class="row justify-content-center ">
@@ -262,11 +250,6 @@
                             <div class="col-10 col-sm-6 col-lg-3 col-xl-2 text-center blockchain"><img
                                 src="images/ripple-logo.png" alt="Ripple"></div>
                         </div>
-                    </div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-12 col-sm-6 text-center mt-4">
-                        <p class="private">Private blockchains available upon request.</p>
                     </div>
                 </div>
             </div>
@@ -643,18 +626,10 @@
                 </div>
                 <div class="justify-content-center row menu">
                     <ul id="menu-top-menu-2" class="nav">
-                        <li class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-17"><a
-                            href="https://chainfront.github.io/features/">Features</a></li>
-                        <li class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-19"><a
-                            href="https://chainfront.github.io/security/">Security</a></li>
-                        <li class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-20"><a
-                            href="https://chainfront.github.io/about/">About</a></li>
                         <li class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-149"><a
-                            href="https://chainfront.github.io/case-studies/">Case Studies</a></li>
+                            href="https://github.com/ChainFront/">GitHub</a></li>
                         <li class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-21"><a
-                            href="https://chainfront.github.io/blog/">Blog</a></li>
-                        <li class="nav-item menu-item menu-item-type-post_type menu-item-object-page menu-item-210"><a
-                            href="https://chainfront.github.io/consulting/">Consulting</a></li>
+                            href="https://medium.com/chainfront">Blog</a></li>
                         <li class="nav-item button-green menu-item menu-item-type-custom menu-item-object-custom menu-item-18">
                             <a target="_blank" href="./apidocs.html">API Docs</a></li>
                     </ul>
